--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -2,12 +2,12 @@
 
 one:
   rate: 1
-  details: MyString
+  feedback: MyText
   user_id: 
   writer_id: 
 
 two:
   rate: 1
-  details: MyString
+  feedback: MyText
   user_id: 
   writer_id: 
