--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,15 +1,25 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
   email: MyString
   password: MyString
-  rating: 1.5
+  token: MyString
+  name: MyString
+  phone: MyString
+  location_id: 
+  about: MyText
+  image: MyString
+  rating: 9.99
   rating_count: 1
 
 two:
-  name: MyString
   email: MyString
   password: MyString
-  rating: 1.5
+  token: MyString
+  name: MyString
+  phone: MyString
+  location_id: 
+  about: MyText
+  image: MyString
+  rating: 9.99
   rating_count: 1
